--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <header>
+
+    </header>
+    <footer>
+      
+    </footer>
   </body>
 </html>
