--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -9,12 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form>
-            <input type="radio" id="PayPal" name="PaymentOpts" value="PayPal">
-            <label for="PayPal">
-                Paypal
-            </label>
-            <br>
-        </form>
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+        <div class="elfsight-app-4190cc5d-3987-45a7-b992-e89c6aea3730" data-elfsight-app-lazy></div>
     </body>
 </html>
