--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src="https://static.elfsight.com/platform/platform.js" async></script>
-        <div class="elfsight-app-b7b5ed3a-8a0d-4232-9b51-e59d0bc2b15b" data-elfsight-app-lazy></div>
+        <span style="align-items:center;">
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-b7b5ed3a-8a0d-4232-9b51-e59d0bc2b15b" data-elfsight-app-lazy></div>
+        </span>
+        
     </body>
 </html>
