--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <script src="https://js.stripe.com/v3/"></script>
-        <script src="index.js" defer></script>
+        <script src="script.js" defer></script>
         <script>
             const addMessage = (message) => {
   const messagesDiv = document.querySelector('#messages');
