--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -9,40 +9,11 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://js.stripe.com/v3/"></script>
         <script src="script.js" defer></script>
-        <script>
-            const addMessage = (message) => {
-  const messagesDiv = document.querySelector('#messages');
-  messagesDiv.style.display = 'block';
-  const messageWithLinks = addDashboardLinks(message);
-  messagesDiv.innerHTML += `> ${messageWithLinks}<br>`;
-  console.log(`Debug: ${message}`);
-};
-
-const addDashboardLinks = (message) => {
-  const piDashboardBase = 'https://dashboard.stripe.com/test/payments';
-  return message.replace(
-    /(pi_(\S*)\b)/g,
-    `<a href="${piDashboardBase}/$1" target="_blank">$1</a>`
-  );
-};
-        </script>
+        <script src="client.js" defer></script>
     </head>
     <body>
         <main>
-            <form id="payment-form">
-                <div id="link-authentication-element">
-                  <!-- Elements will create authentication element here -->
+                <div id="payment-request-button" style="padding-left:49%;padding-top: 49%;">
                 </div>
-                <div id="payment-element">
-                  <!-- Elements will create form elements here -->
-                </div>
-                <button id="submit">Pay now</button>
-                <div id="error-message">
-                  <!-- Display error message to your customers here -->
-                </div>
-              </form>
-        
-              <div id="messages" role="alert" style="display: none;"></div>
-        </main>
     </body>
 </html>
