--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <main>
-                <div id="payment-request-button" style="padding-left:49%;padding-top: 49%;">
+                <div id="express-checkout-element" style="padding-left:48%;padding-top: 49%;">
                 </div>
     </body>
 </html>
