--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -15,5 +15,7 @@
         <main>
                 <div id="express-checkout-element" style="padding-left:48%;padding-top: 49%;">
                 </div>
+                <div id="express-checkout-element2" style="padding-left:48%;padding-top: 39%;">
+                </div>
     </body>
 </html>
