--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </header>
     <nav>
       <hr>
-        
+        <div class="menu">
+          
+        </div>
       <hr>
     </nav>
     <footer>
