--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="/index.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -16,7 +16,15 @@
     <nav>
       <hr>
         <div class="menu">
-          
+          Home
+        </div>
+      <hr>
+        <div class="menu">
+          Non-Fiction
+        </div>
+      <hr>
+        <div class="menu">
+          Fiction
         </div>
       <hr>
     </nav>
