--- a/productPage.html
+++ b/productPage.html
@@ -15,7 +15,19 @@
 
         </header>
         <nav>
-
+            <hr>
+            <div class="menu">
+              Home
+            </div>
+          <hr>
+            <div class="menu">
+              Non-Fiction
+            </div>
+          <hr>
+            <div class="menu">
+              Fiction
+            </div>
+          <hr>
         </nav>
         <footer>
 
