--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="sorter.js"></script>
+    <script src="productPage.js"></script>
   </head>
   <body>
     <header>
@@ -25,6 +27,10 @@
       <hr>
         <div class="menu">
           Fiction
+        </div>
+      <hr>
+        <div class="menu">
+          Cart
         </div>
       <hr>
     </nav>
