--- a/sorter.html
+++ b/sorter.html
@@ -29,6 +29,8 @@
             </div>
           <hr>
         </nav>
+        <br>
+        <br>
         <form>
           <fieldset>
             <legend>
@@ -49,6 +51,7 @@
                 Fiction
               </b>
             </label>
+            <input type="reset" value="Reset">
           </fieldset>
         </form>
         
