--- a/sorter.html
+++ b/sorter.html
@@ -1,62 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            SciBooks sorter
-          </title>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="style.css">
-          <script src="script.js" defer></script>
-          <script src="sorter.js"></script>
-    </head>
-    <body>
-        <header>
 
-        </header>
-        <nav>
-            <hr>
-            <div class="menu">
-              Home
-            </div>
-          <hr>
-            <div class="menu">
+<head>
+  <title>
+    SciBooks sorter
+  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <script src="sorter.js"></script>
+</head>
+
+<body>
+  <header>
+
+  </header>
+  <nav>
+    <hr>
+    <div class="menu">
+      Home
+    </div>
+    <hr>
+    <div class="menu">
+      Non-Fiction
+    </div>
+    <hr>
+    <div class="menu">
+      Fiction
+    </div>
+    <hr>
+  </nav>
+  <br>
+  <br>
+  <article>
+    <section>
+      <form>
+        <fieldset>
+          <legend>
+            <b>
+              Attributes
+            </b>
+          </legend>
+          <input type="radio" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
+          <label for="Non-Fiction">
+            <b>
               Non-Fiction
-            </div>
-          <hr>
-            <div class="menu">
+            </b>
+          </label>
+          <br>
+          <input type="radio" id="Fiction" name="Catagory1" value="Fiction">
+          <label for="Fiction">
+            <b>
               Fiction
-            </div>
-          <hr>
-        </nav>
-        <br>
-        <br>
-        <form>
-          <fieldset>
-            <legend>
-              <b>
-                Attributes
-              </b>
-            </legend>
-            <input type="radio" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
-            <label for="Non-Fiction">
-              <b>
-                Non-Fiction
-              </b>
-            </label>
-            <br>
-            <input type="radio" id="Fiction" name="Catagory1" value="Fiction">
-            <label for="Fiction">
-              <b>
-                Fiction
-              </b>
-            </label>
-            <input type="reset" value="Reset">
-          </fieldset>
-        </form>
-        
-        <footer>
+            </b>
+          </label>
+          <input type="reset" value="Reset">
+        </fieldset>
+      </form>
+    </section>
+  </article>
 
-        </footer>
-    </body>
+
+  <footer>
+
+  </footer>
+</body>
+
 </html>
