--- a/sorter.html
+++ b/sorter.html
@@ -35,7 +35,7 @@
   <br>
   <article>
     <section>
-      <form>
+      <form method="get">
         <fieldset>
           <legend>
             <b>
