--- a/sorter.html
+++ b/sorter.html
@@ -44,16 +44,13 @@
           </legend>
           <input type="radio" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
           <label for="Non-Fiction">
-            <b>
-              Non-Fiction
-            </b>
+            Non-Fiction
           </label>
+          <input type="search"
           <br>
           <input type="radio" id="Fiction" name="Catagory1" value="Fiction">
           <label for="Fiction">
-            <b>
-              Fiction
-            </b>
+            Fiction
           </label>
           <input type="reset" value="Reset">
         </fieldset>
