--- a/sorter.html
+++ b/sorter.html
@@ -33,6 +33,16 @@
   </nav>
   <br>
   <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <article>
     <section>
       <form method="get">
@@ -46,7 +56,7 @@
           <label for="Non-Fiction">
             Non-Fiction
           </label>
-          <input type="search"
+          <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
           <br>
           <input type="radio" id="Fiction" name="Catagory1" value="Fiction">
           <label for="Fiction">
