--- a/sorter.html
+++ b/sorter.html
@@ -43,16 +43,20 @@
               Attributes
             </b>
           </legend>
-          <input type="radio" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
+          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
           <label for="Non-Fiction">
             Non-Fiction
           </label>
           <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-right: 49%;">
           <br>
-          <input type="radio" id="Fiction" name="Catagory1" value="Fiction">
+          <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction">
           <label for="Fiction">
             Fiction
           </label>
+          <br>
+          <hr>
+          <hr>
+          <br>
           <input type="reset" value="Reset">
         </fieldset>
       </form>
