--- a/sorter.html
+++ b/sorter.html
@@ -54,8 +54,30 @@
             Fiction
           </label>
           <br>
-          <hr>
-          <hr>
+          <fieldset>
+            <legend>
+              Topics
+            </legend>
+            <input type="checkbox" id="Science" name="Topics" value="Science">
+            <label for="Science">
+              Science
+            </label>
+            <br>
+            <input type="checkbox" id="Computer-Science" name="Topics" value="Computer-Science">
+            <label for="Computer-Science">
+              Computer Science
+            </label>
+            <br>
+            <input type="checkbox" id="Space" name="Topics" value="Space">
+            <label for="Space">
+              Space
+            </label>
+            <br>
+            <input type="checkbox" id="ShortStories" name="Topics" value="ShortStories">
+            <label for="ShortStories">
+              Short ShortStories
+            </label>
+          </fieldset>
           <br>
           <input type="reset" value="Reset">
         </fieldset>
