--- a/sorter.html
+++ b/sorter.html
@@ -18,7 +18,7 @@
   </header>
   <nav>
     <hr>
-    <div class="menu">
+    <div class="menu" onclick="window.location.href='index.html';">
       Home
     </div>
     <hr>
