--- a/Cart.html
+++ b/Cart.html
@@ -1,9 +1,37 @@
 <!DOCOTYPE html>
 <html>
   <head>
-    
+    <title>
+      Your Cart
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <script src="sorter.js"></script>
+    <script src="productPage.js"></script>
   </head>
   <body>
-    
+    <header>
+
+    </header>
+    <nav>
+      <hr>
+        <div class="menu" onclick="window.location.href='index.html';">
+          Home
+        </div>
+      <hr>
+        <div class="menu" onclick="window.location.href='sorter.html';">
+          Lookup
+        </div>
+      <hr>
+        <div class="menu">
+          Cart
+        </div>
+      <hr>
+    </nav>
+    <footer>
+
+    </footer>
   </body>
 </html>
