--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
           Home
         </div>
       <hr>
-        <div class="menu">
-          Non-Fiction
+        <div class="menu" onclick="window.location.href='sorter.html';">
+          Lookup
         </div>
       <hr>
-        <div class="menu">
-          Fiction
-        </div>
-      <hr>
-        <div class="menu">
+        <div class="menu" onclick="window.location.href='Cart.html';">
           Cart
         </div>
       <hr>
