--- a/sorter.html
+++ b/sorter.html
@@ -22,12 +22,12 @@
       Home
     </div>
     <hr>
-    <div class="menu">
-      Non-Fiction
+    <div class="menu" style="font-size: larger;">
+      Lookup
     </div>
     <hr>
-    <div class="menu">
-      Fiction
+    <div class="menu" onclick="window.location.href='Cart.html';">
+      Cart
     </div>
     <hr>
   </nav>
