--- a/Cart.html
+++ b/Cart.html
@@ -25,7 +25,7 @@
           Lookup
         </div>
       <hr>
-        <div class="menu">
+        <div class="menu" style="font-size: xx-large;">
           Cart
         </div>
       <hr>
