--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
       <hr>
-        <div class="menu">
+        <div class="menu" style="font-size: xx-large;">
           Home
         </div>
       <hr>
