--- a/sorter.html
+++ b/sorter.html
@@ -22,7 +22,7 @@
       Home
     </div>
     <hr>
-    <div class="menu" style="font-size: larger;">
+    <div class="menu" style="font-size: xx-large;">
       Lookup
     </div>
     <hr>
