--- a/sorter.html
+++ b/sorter.html
@@ -47,7 +47,7 @@
           <label for="Non-Fiction">
             Non-Fiction
           </label>
-          <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-right: 49%;">
+          <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-left: 49%;">
           <br>
           <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction">
           <label for="Fiction">
