--- a/productPage.html
+++ b/productPage.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
-        <script src="productPage.js"></script>
     </head>
     <body>
         <header>
@@ -29,6 +28,14 @@
             </div>
           <hr>
         </nav>
+        <hr>
+        <br>
+        <article>
+            <section>
+                <div class="pictures" onclick="Increase()">
+                </div>
+            </section>
+        </article>
         <footer>
 
         </footer>
