--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,9 @@
       <div class="grid">
         <div class="row" id="row1">
           <div class="column" id="column1-row1">
-            
+            <p>
+              hello
+            </p>
           </div>
           <div class="column" id="column2-row1">
             
