--- a/sorter.html
+++ b/sorter.html
@@ -75,7 +75,7 @@
             <br>
             <input type="checkbox" id="ShortStories" name="Topics" value="ShortStories">
             <label for="ShortStories">
-              Short ShortStories
+              Short Stories
             </label>
           </fieldset>
           <br>
@@ -88,9 +88,22 @@
       <div class="grid">
         <div class="row" id="row1">
           <div class="column" id="column1-row1">
-            <p>
-              hello
-            </p>
+            <img src="resources/book1(1).png" width="300" height="auto">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  Quantum Supremacy
+                </b>
+              </span>
+              <span class="auther">
+                By: Michio Kaku
+              </span>
+              <br>
+              <span class="cost">
+                $15.99
+              </span>
+            </span>
           </div>
           <div class="column" id="column2-row1">
             <p>
