--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,7 @@
       <div class="grid">
         <div class="row" id="row1">
           <div class="column" id="column1-row1">
-            <img src="resources/book1(1).png" width="300" height="auto">
+            <img src="resources/book1(1).png" width=300px height=auto>
             <br>
             <span>
               <span class="title" style="font-size: larger;">
@@ -106,41 +106,117 @@
             </span>
           </div>
           <div class="column" id="column2-row1">
-            <p>
-              hello
-            </p>
+            <img src="resources/book2(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  On The Origin Of Time
+                </b>
+              </span>
+              <span class="auther">
+                By: Stephen Hawking
+              </span>
+              <br>
+              <span class="cost">
+                $15.99
+              </span>
+            </span>
           </div>
           <div class="column" id="column3-row1">
-            <p>
-              hello
-            </p>
+            <img src="resources/book3(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  Origins
+                </b>
+              </span>
+              <span class="auther">
+                By: Neil DeGrasse Tyson
+              </span>
+              <br>
+              <span class="cost">
+                $10.00
+              </span>
+            </span>
           </div>
         </div>
         <br>
         <div class="row" id="row2">
           <div class="column">
-            <p>
-              hello
-            </p>
+            <img src="resources/book4(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  Astrophysics for people in a hurry
+                </b>
+              </span>
+              <span class="auther">
+                By: Neil DeGrasse Tyson
+              </span>
+              <br>
+              <span class="cost">
+                $15.99
+              </span>
+            </span>
           </div>
           <div class="column">
-            <p>
-              hello
-            </p>
+            <img src="resources/book5(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  An astronaut's guide to life
+                </b>
+              </span>
+              <span class="auther">
+                By: Chris Hadfield
+              </span>
+              <br>
+              <span class="cost">
+                $10.00
+              </span>
+            </span>
           </div>
           <div class="column">
-            <p>
-              hello
-            </p>
+            <img src="resources/book6(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  The Grand Design
+                </b>
+              </span>
+              <span class="auther">
+                By: Stephen Hawking
+              </span>
+              <br>
+              <span class="cost">
+                $18.00
+              </span>
+            </span>
           </div>
         </div>
         <br>
         <div class="row" id="row3">
-          <div class="column">
-            <p>
-              hello
-            </p>
-          </div>
+          <img src="resources/book7(1).png" width=300px height=auto>
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  Letters from an Astrophysicist
+                </b>
+              </span>
+              <span class="auther">
+                By: Neil DeGrasse Tyson
+              </span>
+              <br>
+              <span class="cost">
+                $25.00
+              </span>
+            </span>
           <div class="column">
             <p>
               hello
