--- a/sorter.html
+++ b/sorter.html
@@ -106,7 +106,7 @@
             </span>
           </div>
           <div class="column" id="column2-row1">
-            <img src="resources/book2(1).png" width=300px height=auto>
+            <img src="resources/book2(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
@@ -124,7 +124,7 @@
             </span>
           </div>
           <div class="column" id="column3-row1">
-            <img src="resources/book3(1).png" width=300px height=auto>
+            <img src="resources/book3(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
@@ -145,7 +145,7 @@
         <br>
         <div class="row" id="row2">
           <div class="column">
-            <img src="resources/book4(1).png" width=300px height=auto>
+            <img src="resources/book4(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
@@ -163,7 +163,7 @@
             </span>
           </div>
           <div class="column">
-            <img src="resources/book5(1).png" width=300px height=auto>
+            <img src="resources/book5(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
@@ -181,7 +181,7 @@
             </span>
           </div>
           <div class="column">
-            <img src="resources/book6(1).png" width=300px height=auto>
+            <img src="resources/book6(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
@@ -201,7 +201,7 @@
         </div>
         <br>
         <div class="row" id="row3">
-          <img src="resources/book7(1).png" width=300px height=auto>
+          <img src="resources/book7(1).jpg" width=300px height=auto>
             <br>
             <span>
               <span class="title">
