--- a/sorter.html
+++ b/sorter.html
@@ -85,9 +85,9 @@
     </section>
     <br>
     <section>
-      <div class="grid">
-        <div class="row" id="row1">
-          <div class="column" id="column1-row1">
+      <table>
+        <tr>
+          <th>
             <img src="resources/book1(1).png" width=300px height=auto>
             <br>
             <span>
@@ -104,8 +104,8 @@
                 $15.99
               </span>
             </span>
-          </div>
-          <div class="column" id="column2-row1">
+          </tr>
+          <th>
             <img src="resources/book2(1).jpg" width=300px height=auto>
             <br>
             <span>
@@ -122,8 +122,8 @@
                 $15.99
               </span>
             </span>
-          </div>
-          <div class="column" id="column3-row1">
+          </th>
+          <th>
             <img src="resources/book3(1).jpg" width=300px height=auto>
             <br>
             <span>
@@ -140,11 +140,10 @@
                 $10.00
               </span>
             </span>
-          </div>
-        </div>
-        <br>
-        <div class="row" id="row2">
-          <div class="column">
+          </th>
+        </tr>
+        <tr>
+          <th>
             <img src="resources/book4(1).jpg" width=300px height=auto>
             <br>
             <span>
@@ -161,8 +160,8 @@
                 $15.99
               </span>
             </span>
-          </div>
-          <div class="column">
+          </th>
+          <th>
             <img src="resources/book5(1).jpg" width=300px height=auto>
             <br>
             <span>
@@ -179,57 +178,9 @@
                 $10.00
               </span>
             </span>
-          </div>
-          <div class="column">
-            <img src="resources/book6(1).jpg" width=300px height=auto>
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  The Grand Design
-                </b>
-              </span>
-              <span class="auther">
-                By: Stephen Hawking
-              </span>
-              <br>
-              <span class="cost">
-                $18.00
-              </span>
-            </span>
-          </div>
-        </div>
-        <br>
-        <div class="row" id="row3">
-          <img src="resources/book7(1).jpg" width=300px height=auto>
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  Letters from an Astrophysicist
-                </b>
-              </span>
-              <span class="auther">
-                By: Neil DeGrasse Tyson
-              </span>
-              <br>
-              <span class="cost">
-                $25.00
-              </span>
-            </span>
-          <div class="column">
-            <p>
-              hello
-            </p>
-          </div>
-          <div class="column">
-            <p>
-              hello
-            </p>
-          </div>
-        </div>
-        <br>
-      </div>
+          </th>
+        </tr>
+      </table>
     </section>
   </article>
 
