--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,7 @@
       <table>
         <tr>
           <th>
-            <img src="resources/book1(1).png" width=300px height=auto>
+            <img src="resources/book1(1).png" style="max-width: 70%; max-height: auto;>
             <br>
             <span>
               <span class="title" style="font-size: larger;">
@@ -106,7 +106,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book2(1).jpg" width=300px height=auto>
+            <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;>
             <br>
             <span>
               <span class="title">
@@ -124,7 +124,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book3(1).jpg" width=300px height=auto>
+            <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;>
             <br>
             <span>
               <span class="title">
@@ -144,7 +144,7 @@
         </tr>
         <tr>
           <th>
-            <img src="resources/book4(1).jpg" width=300px height=auto>
+            <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;>
             <br>
             <span>
               <span class="title">
@@ -162,7 +162,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book5(1).jpg" width=300px height=auto>
+            <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;>
             <br>
             <span>
               <span class="title">
