--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,7 @@
       <table>
         <tr>
           <th>
-            <img src="resources/book1(1).png" style="max-width: 70%; max-height: auto;>
+            <img src="resources/book1(1).png" style="max-width: 70%; max-height: 50%;>
             <br>
             <span>
               <span class="title" style="font-size: larger;">
