--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,7 @@
       <table>
         <tr>
           <th>
-            <img src="resources/book1(1).png" style="max-width: 70%; max-height: 50%;>
+            <img src="resources/book1(1).png" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
               <span class="title" style="font-size: larger;">
@@ -176,6 +176,22 @@
               <br>
               <span class="cost">
                 $10.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
+            <br>
+            <span>
+              <span class="title">
+                The Grand Design
+              </span>
+              <span class="auther">
+                By: Stephen Hawking
+              </span>
+              <br>
+              <span class="cost">
+                $18.00
               </span>
             </span>
           </th>
