--- a/sorter.html
+++ b/sorter.html
@@ -162,7 +162,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;>
+            <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
               <span class="title">
