--- a/sorter.html
+++ b/sorter.html
@@ -106,7 +106,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;>
+            <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
               <span class="title">
@@ -124,7 +124,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;>
+            <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
               <span class="title">
@@ -144,7 +144,7 @@
         </tr>
         <tr>
           <th>
-            <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;>
+            <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
               <span class="title">
@@ -184,7 +184,9 @@
             <br>
             <span>
               <span class="title">
-                The Grand Design
+                <b>
+                  The Grand Design
+                </b>
               </span>
               <span class="auther">
                 By: Stephen Hawking
@@ -192,6 +194,82 @@
               <br>
               <span class="cost">
                 $18.00
+              </span>
+            </span>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  Letters From an Astrophysicsist
+                </b>
+              </span>
+              <span class="auther">
+                By: Neil DeGrasse Tyson
+              </span>
+              <br>
+              <span class="cost">
+                $25.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  Breif Answers, Big Questions
+                </b>
+              </span>
+              <span class="auther">
+                By: Stephen Hawking
+              </span>
+              <br>
+              <span class="cost">
+                $60.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/books9(1).jpg" style="max-width: 70%; max-height: auto;">
+            <br>
+            <span>
+              <span class="title">
+                <b>
+                  The C Programming Language
+                </b>
+              </span>
+              <span class="auther">
+                By: Brian W. Kernighan & Dennis M. Ritchie
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book10(1).png" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  The Three Body Problem Trilogy
+                </b>
+              </span>
+              <span class="auther">
+                By: Cixin Liu
+              </span>
+              <br>
+              <span class="cost">
+                $60.00
               </span>
             </span>
           </th>
