--- a/sorter.html
+++ b/sorter.html
@@ -236,7 +236,7 @@
             </span>
           </th>
           <th>
-            <img src="resources/books9(1).jpg" style="max-width: 70%; max-height: auto;">
+            <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
               <span class="title">
@@ -256,7 +256,7 @@
         </tr>
         <tr>
           <th>
-            <img src="resources/book10(1).png" style="max-width: 70%; max-height: 50%;">
+            <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
               <span class="title" style="font-size: larger;">
