--- a/sorter.html
+++ b/sorter.html
@@ -88,7 +88,7 @@
       <table>
         <tr>
           <th>
-            <img src="resources/book1(1).png" style="max-width: 70%; max-height: 50%;">
+            <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
               <span class="title" style="font-size: larger;">
@@ -96,6 +96,7 @@
                   Quantum Supremacy
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Michio Kaku
               </span>
@@ -114,6 +115,7 @@
                   On The Origin Of Time
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Stephen Hawking
               </span>
@@ -132,6 +134,7 @@
                   Origins
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Neil DeGrasse Tyson
               </span>
@@ -152,6 +155,7 @@
                   Astrophysics for people in a hurry
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Neil DeGrasse Tyson
               </span>
@@ -170,6 +174,7 @@
                   An astronaut's guide to life
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Chris Hadfield
               </span>
@@ -188,6 +193,7 @@
                   The Grand Design
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Stephen Hawking
               </span>
@@ -208,6 +214,7 @@
                   Letters From an Astrophysicsist
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Neil DeGrasse Tyson
               </span>
@@ -226,6 +233,7 @@
                   Breif Answers, Big Questions
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Stephen Hawking
               </span>
@@ -244,6 +252,7 @@
                   The C Programming Language
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Brian W. Kernighan & Dennis M. Ritchie
               </span>
@@ -264,12 +273,150 @@
                   The Three Body Problem Trilogy
                 </b>
               </span>
+              <br>
               <span class="auther">
                 By: Cixin Liu
               </span>
               <br>
               <span class="cost">
                 $60.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  Supernova Era
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Cixin Liu
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  Ball Lightning
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Cixin Liu
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  To Hold Up The Sky
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Cixin Liu
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  The Wandering Earth
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Cixin Liu
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  The Redemtion of Time
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Baoshu
+              </span>
+              <br>
+              <span class="cost">
+                $20.00
+              </span>
+            </span>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  Bowl of Heaven & Shipstar
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Gregory Benford & Larry Niven
+              </span>
+              <br>
+              <span class="cost">
+                $30.00
+              </span>
+            </span>
+          </th>
+          <th>
+            <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
+            <br>
+            <span>
+              <span class="title" style="font-size: larger;">
+                <b>
+                  Glorious
+                </b>
+              </span>
+              <br>
+              <span class="auther">
+                By: Gregory Benford & Larry Niven
+              </span>
+              <br>
+              <span class="cost">
+                $15.00
               </span>
             </span>
           </th>
