--- a/sorter.html
+++ b/sorter.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header>\
+  <header>
   </header>
   <nav>
     <hr>
@@ -46,7 +46,14 @@
           <label for="Non-Fiction">
             Non-Fiction
           </label>
-          <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-left: 49%;">
+          <fieldset style="margin-left: 49%;">
+            <legend>
+              <b>
+                Search
+              </b>
+            </legend>
+            <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
+          </fieldset>
           <br>
           <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction">
           <label for="Fiction">
