--- a/sorter.html
+++ b/sorter.html
@@ -78,37 +78,38 @@
             </label>
           </fieldset>
           <br>
+          <label for="autherSelect">
+            Author: 
+          </label>
+          <br>
+          <select name="autherSelect" id="autherSelect">
+            <option value="Michio">
+              Michio Kaku
+            </option>
+            <option value="hawking">
+              Stephen Hawking
+            </option>
+            <option value="NeilDeGrasse">
+              Neil DeGrasse Tyson
+            </option>
+            <option value="Hadfield">
+              Chris Hadfield
+            </option>
+            <option value="BD">
+              Brian W. Kernighan & Dennis M. Ritchie
+            </option>
+            <option value="Cixin">
+              Cixin Liu
+            </option>
+            <option value="Baoshu">
+              Baoshu
+            </option>
+            <option value="GL">
+              Gregory Benford & Larry Niven
+            </option>
+          </select>
           <input type="reset" value="Reset">
         </fieldset>
-        <select name="autherSelect" id="autherSelect">
-          <option value="Michio">
-            Michio Kaku
-          </option>
-          <option value="hawking">
-            Stephen Hawking
-          </option>
-          <option value="NeilDeGrasse">
-            Neil DeGrasse Tyson
-          </option>
-          <option value="Hadfield">
-            Chris Hadfield
-          </option>
-          <option value="BD">
-            Brian W. Kernighan & Dennis M. Ritchie
-          </option>
-          <option value="Cixin">
-            Cixin Liu
-          </option>
-          <option value="Baoshu">
-            Baoshu
-          </option>
-          <option value="GL">
-            Gregory Benford & Larry Niven
-          </option>
-        </select>
-        <label for="autherSelect">
-          Auther: 
-        </label>
       </form>
     </section>
     <br>
