--- a/sorter.html
+++ b/sorter.html
@@ -42,13 +42,13 @@
               Attributes
             </b>
           </legend>
-          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction">
+          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction" class="in">
           <label for="Non-Fiction">
             Non-Fiction
           </label>
           <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-left: 49%;">
           <br>
-          <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction">
+          <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction" class="in">
           <label for="Fiction">
             Fiction
           </label>
@@ -57,22 +57,22 @@
             <legend>
               Topics
             </legend>
-            <input type="checkbox" id="Science" name="Topics" value="Science">
+            <input type="checkbox" id="Science" name="Topics" value="Science" class="in">
             <label for="Science">
               Science
             </label>
             <br>
-            <input type="checkbox" id="Computer-Science" name="Topics" value="Computer-Science">
+            <input type="checkbox" id="Computer-Science" name="Topics" value="Computer-Science" class="in">
             <label for="Computer-Science">
               Computer Science
             </label>
             <br>
-            <input type="checkbox" id="Space" name="Topics" value="Space">
+            <input type="checkbox" id="Space" name="Topics" value="Space" class="in">
             <label for="Space">
               Space
             </label>
             <br>
-            <input type="checkbox" id="ShortStories" name="Topics" value="ShortStories">
+            <input type="checkbox" id="ShortStories" name="Topics" value="ShortStories" class="in">
             <label for="ShortStories">
               Short Stories
             </label>
@@ -82,7 +82,7 @@
             Author: 
           </label>
           <br>
-          <select name="autherSelect" id="autherSelect">
+          <select name="autherSelect" id="autherSelect" class="in">
             <option value="Michio">
               Michio Kaku
             </option>
