--- a/sorter.html
+++ b/sorter.html
@@ -141,7 +141,9 @@
             <span>
               <span class="title">
                 <b>
-                  On The Origin Of Time
+                  <a>
+                    On The Origin of Time
+                  </a>
                 </b>
               </span>
               <br>
@@ -160,7 +162,9 @@
             <span>
               <span class="title">
                 <b>
-                  Origins
+                  <a>
+                    Origins
+                  </a>
                 </b>
               </span>
               <br>
@@ -181,7 +185,9 @@
             <span>
               <span class="title">
                 <b>
-                  Astrophysics for people in a hurry
+                  <a>
+                    Astrophysics for people in a hurry
+                  </a>
                 </b>
               </span>
               <br>
@@ -200,7 +206,9 @@
             <span>
               <span class="title">
                 <b>
-                  An astronaut's guide to life
+                  <a>
+                    An Astronaut's Guide to Life
+                  </a>
                 </b>
               </span>
               <br>
@@ -219,7 +227,9 @@
             <span>
               <span class="title">
                 <b>
-                  The Grand Design
+                  <a>
+                    The Grand Design
+                  </a>
                 </b>
               </span>
               <br>
@@ -240,7 +250,9 @@
             <span>
               <span class="title">
                 <b>
-                  Letters From an Astrophysicsist
+                  <a>
+                    Letters From an Astrophysicsist
+                  </a>
                 </b>
               </span>
               <br>
@@ -259,7 +271,9 @@
             <span>
               <span class="title">
                 <b>
-                  Breif Answers, Big Questions
+                  <a>
+                    Breif Answers, Big Questions
+                  </a>
                 </b>
               </span>
               <br>
@@ -278,7 +292,9 @@
             <span>
               <span class="title">
                 <b>
-                  The C Programming Language
+                  <a>
+                    The C Programming Language
+                  </a>
                 </b>
               </span>
               <br>
@@ -299,7 +315,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  The Three Body Problem Trilogy
+                  <a>
+                    The Three Body Problem Trilogy
+                  </a>
                 </b>
               </span>
               <br>
@@ -318,7 +336,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  Supernova Era
+                  <a>
+                    Supernove Era
+                  </a>
                 </b>
               </span>
               <br>
@@ -337,7 +357,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  Ball Lightning
+                  <a>
+                    Ball Lightning
+                  </a>
                 </b>
               </span>
               <br>
@@ -358,7 +380,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  To Hold Up The Sky
+                  <a>
+                    To Hold Up The Sky
+                  </a>
                 </b>
               </span>
               <br>
@@ -377,7 +401,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  The Wandering Earth
+                  <a>
+                    The Wandering Earth
+                  </a>
                 </b>
               </span>
               <br>
@@ -396,7 +422,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  The Redemtion of Time
+                  <a>
+                    The Redemtion of Time
+                  </a>
                 </b>
               </span>
               <br>
@@ -417,7 +445,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  Bowl of Heaven & Shipstar
+                  <a>
+                    Bowl of Heaven & Shipstar
+                  </a>
                 </b>
               </span>
               <br>
@@ -436,7 +466,9 @@
             <span>
               <span class="title" style="font-size: larger;">
                 <b>
-                  Glorious
+                  <a>
+                    Glorious
+                  </a>
                 </b>
               </span>
               <br>
